Don't deepcopy; use simple python3 __init__

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,16 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated user parameters: {'weights': array([-0.54790824,  0.49907549, -0.49900026, -0.18472685,  0.09002425,\n",
-      "       -0.22292274, -0.33135484])}\n"
+      "Estimated user parameters: {'weights': array([ 0.32287627,  0.16611298,  0.41106766,  0.06826203, -0.0848924 ,\n",
+      "        0.35377482, -0.74977178])}\n",
+      "Trajectory 1: [-0.03887442  0.06365459  0.05268661  0.70433381  0.70711222  0.58672473\n",
+      "  0.68790523]\n",
+      "Trajectory 2: [0.26158233 0.12802326 0.10742929 0.70433381 0.70711222 0.60934286\n",
+      " 0.68960725]\n",
+      "Objective Value: 0.01965743421679309\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1105114ead84d48993b66466d43efe3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
