Epsilon greedy; change decay; change transition

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e2ac0039fc246c69e6effe3c953337c",
+       "model_id": "e0fa1994a80944a388ae0af543dd563f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,56 +65,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10b83d35606f4792b8b3e24a3661d3ab",
+       "model_id": "42e1e795b0614291baabe90d4ccf5669",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntProgress(value=1, layout=Layout(height='36px', margin='8px', width='auto'), max=15, style=ProgressStyle(bar…"
+       "IntProgress(value=0, layout=Layout(height='36px', margin='8px', width='auto'), max=14, style=ProgressStyle(bar…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "134a9d59d1d94fabae9eda9e35136d08",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Which is better for a paper figure? Enter a number (1: left, 2: right, 0: about equal): q\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'q'",
+     "ename": "NotImplementedError",
+     "evalue": "greedy batch has not been implemented for the given query and belief types.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcie\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mteach\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Projects/cieran/cieran/train.py:164\u001b[0m, in \u001b[0;36mCieran.teach\u001b[0;34m(self, n_queries)\u001b[0m\n\u001b[1;32m    157\u001b[0m queries, objective_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_query_optimizer\u001b[38;5;241m.\u001b[39moptimize(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisagreement\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_belief, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_query)\n\u001b[1;32m    159\u001b[0m \u001b[38;5;66;03m# print('Trajectory 1: ' + str(queries[0].slate[0].features))\u001b[39;00m\n\u001b[1;32m    160\u001b[0m \u001b[38;5;66;03m# print('Trajectory 2: ' + str(queries[0].slate[1].features))\u001b[39;00m\n\u001b[1;32m    161\u001b[0m \n\u001b[1;32m    162\u001b[0m \u001b[38;5;66;03m# print('Objective Value: ' + str(objective_values[0]))\u001b[39;00m\n\u001b[0;32m--> 164\u001b[0m responses \u001b[38;5;241m=\u001b[39m \u001b[43mtrue_user\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrespond\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqueries\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    165\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_belief\u001b[38;5;241m.\u001b[39mupdate(WeakComparison(queries[\u001b[38;5;241m0\u001b[39m], responses[\u001b[38;5;241m0\u001b[39m]))\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_env\u001b[38;5;241m.\u001b[39mreward_weights \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_belief\u001b[38;5;241m.\u001b[39mmean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[0;32m~/Projects/cieran/cieran/learning/user_models.py:251\u001b[0m, in \u001b[0;36mHumanUser.respond\u001b[0;34m(self, queries)\u001b[0m\n\u001b[1;32m    249\u001b[0m responses \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    250\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m query \u001b[38;5;129;01min\u001b[39;00m queries:\n\u001b[0;32m--> 251\u001b[0m     responses\u001b[38;5;241m.\u001b[39mappend(\u001b[43mquery\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisualize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelay\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    252\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m responses\n",
-      "File \u001b[0;32m~/Projects/cieran/cieran/learning/data_types.py:174\u001b[0m, in \u001b[0;36mWeakComparisonQuery.visualize\u001b[0;34m(self, delay)\u001b[0m\n\u001b[1;32m    172\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m selection \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    173\u001b[0m     selection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWhich is better for a paper figure? Enter a number (1 left, 2 right, 0 about equal): \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 174\u001b[0m     selection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mselection\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m isinteger(selection) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mint\u001b[39m(selection) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresponse_set:\n\u001b[1;32m    176\u001b[0m         selection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'q'"
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcie\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mteach\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Projects/cieran/cieran/train.py:157\u001b[0m, in \u001b[0;36mCieran.teach\u001b[0;34m(self, n_queries)\u001b[0m\n\u001b[1;32m    154\u001b[0m bar\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m query_no\n\u001b[1;32m    155\u001b[0m display(bar)\n\u001b[0;32m--> 157\u001b[0m queries, objective_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_query_optimizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptimize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdisagreement\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_belief\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_query\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;66;03m# print('Trajectory 1: ' + str(queries[0].slate[0].features))\u001b[39;00m\n\u001b[1;32m    160\u001b[0m \u001b[38;5;66;03m# print('Trajectory 2: ' + str(queries[0].slate[1].features))\u001b[39;00m\n\u001b[1;32m    161\u001b[0m \n\u001b[1;32m    162\u001b[0m \u001b[38;5;66;03m# print('Objective Value: ' + str(objective_values[0]))\u001b[39;00m\n\u001b[1;32m    164\u001b[0m responses \u001b[38;5;241m=\u001b[39m true_user\u001b[38;5;241m.\u001b[39mrespond(queries[\u001b[38;5;241m0\u001b[39m])\n",
+      "File \u001b[0;32m~/Projects/cieran/cieran/querying/query_optimizer.py:132\u001b[0m, in \u001b[0;36mQueryOptimizerDiscreteTrajectorySet.optimize\u001b[0;34m(self, acquisition_func_str, belief, initial_query, batch_size, optimization_method, **kwargs)\u001b[0m\n\u001b[1;32m    129\u001b[0m     optimization_method \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexhaustive_search\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    131\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m optimization_method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexhaustive_search\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 132\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexhaustive_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43macquisition_func\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbelief\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    133\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m optimization_method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreedy\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    134\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgreedy_batch(acquisition_func, belief, initial_query, batch_size, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[0;32m~/Projects/cieran/cieran/querying/query_optimizer.py:166\u001b[0m, in \u001b[0;36mQueryOptimizerDiscreteTrajectorySet.exhaustive_search\u001b[0;34m(self, acquisition_func, belief, initial_query, **kwargs)\u001b[0m\n\u001b[1;32m    146\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexhaustive_search\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    147\u001b[0m                       acquisition_func: Callable,\n\u001b[1;32m    148\u001b[0m                       belief: Belief,\n\u001b[1;32m    149\u001b[0m                       initial_query: Query,\n\u001b[1;32m    150\u001b[0m                       \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[List[Query], np\u001b[38;5;241m.\u001b[39marray]:\n\u001b[1;32m    151\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;124;03m    Searches over the possible queries to find the singular most optimal query.\u001b[39;00m\n\u001b[1;32m    153\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[38;5;124;03m                - numpy.array: An array of floats that keep the acquisition function value corresponding to the output query.\u001b[39;00m\n\u001b[1;32m    165\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 166\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgreedy_batch\u001b[49m\u001b[43m(\u001b[49m\u001b[43macquisition_func\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbelief\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Projects/cieran/cieran/querying/query_optimizer.py:298\u001b[0m, in \u001b[0;36mQueryOptimizerDiscreteTrajectorySet.greedy_batch\u001b[0;34m(self, acquisition_func, belief, initial_query, batch_size, **kwargs)\u001b[0m\n\u001b[1;32m    295\u001b[0m             best_batch[i]\u001b[38;5;241m.\u001b[39mslate \u001b[38;5;241m=\u001b[39m planned_trajs[subsets[inds[i]]]\n\u001b[1;32m    296\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m best_batch, vals[inds]\n\u001b[0;32m--> 298\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreedy batch has not been implemented for the given query and belief types.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: greedy batch has not been implemented for the given query and belief types."
      ]
     }
    ],
@@ -124,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edfec9c85e744e6498090698b71e7814",
+       "model_id": "9d8dfed81691429ca53089a9fd321a66",
        "version_major": 2,
        "version_minor": 0
       },
