Change progress bar color

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58c8ca55f73e46eaa6c652ba32e2c8d9",
+       "model_id": "85923e84d9da4e7e83eb3c0c9b350d23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,21 +51,71 @@
     }
    ],
    "source": [
-    "cie = Cieran(palette='tableau10', draw=draw_kde)"
+    "cie = Cieran(color='tableau10', draw=draw_kde)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "acfdd75ffa3540739fed8548c72232fd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=2, layout=Layout(height='36px', margin='8px', width='auto'), max=14, style=ProgressStyle(bar…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b811915000d4b6a814beab558ef5a64",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which is better for a paper figure? Enter a number (1 left, 2 right, 0 about equal): q\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'q'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcie\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mteach\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Projects/cieran/cieran/train.py:153\u001b[0m, in \u001b[0;36mCieran.teach\u001b[0;34m(self, n_queries)\u001b[0m\n\u001b[1;32m    146\u001b[0m queries, objective_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_query_optimizer\u001b[38;5;241m.\u001b[39moptimize(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisagreement\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_belief, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_query)\n\u001b[1;32m    148\u001b[0m \u001b[38;5;66;03m# print('Trajectory 1: ' + str(queries[0].slate[0].features))\u001b[39;00m\n\u001b[1;32m    149\u001b[0m \u001b[38;5;66;03m# print('Trajectory 2: ' + str(queries[0].slate[1].features))\u001b[39;00m\n\u001b[1;32m    150\u001b[0m \n\u001b[1;32m    151\u001b[0m \u001b[38;5;66;03m# print('Objective Value: ' + str(objective_values[0]))\u001b[39;00m\n\u001b[0;32m--> 153\u001b[0m responses \u001b[38;5;241m=\u001b[39m \u001b[43mtrue_user\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrespond\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqueries\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_belief\u001b[38;5;241m.\u001b[39mupdate(WeakComparison(queries[\u001b[38;5;241m0\u001b[39m], responses[\u001b[38;5;241m0\u001b[39m]))\n\u001b[1;32m    155\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_env\u001b[38;5;241m.\u001b[39mset_reward_weights(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_belief\u001b[38;5;241m.\u001b[39mmean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "File \u001b[0;32m~/Projects/cieran/cieran/learning/user_models.py:251\u001b[0m, in \u001b[0;36mHumanUser.respond\u001b[0;34m(self, queries)\u001b[0m\n\u001b[1;32m    249\u001b[0m responses \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    250\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m query \u001b[38;5;129;01min\u001b[39;00m queries:\n\u001b[0;32m--> 251\u001b[0m     responses\u001b[38;5;241m.\u001b[39mappend(\u001b[43mquery\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisualize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelay\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    252\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m responses\n",
+      "File \u001b[0;32m~/Projects/cieran/cieran/learning/data_types.py:174\u001b[0m, in \u001b[0;36mWeakComparisonQuery.visualize\u001b[0;34m(self, delay)\u001b[0m\n\u001b[1;32m    172\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m selection \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    173\u001b[0m     selection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWhich is better for a paper figure? Enter a number (1 left, 2 right, 0 about equal): \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 174\u001b[0m     selection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mselection\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m isinteger(selection) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mint\u001b[39m(selection) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresponse_set:\n\u001b[1;32m    176\u001b[0m         selection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'q'"
+     ]
+    }
+   ],
    "source": [
     "cie.teach()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -82,7 +123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b788a2b478c474cb1f7061e372b1707",
+       "model_id": "ef02ef8b607e48c78a8177d8713dab08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,6 +203,27 @@
    ],
    "source": [
     "cie._ranked_results[1].plot_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.34286793,  0.31015012,  0.21802309, -0.05009967, -0.54331509,\n",
+       "        0.58261286,  0.18012019,  0.05384589,  0.25735722])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cie._env.reward_weights"
    ]
   },
   {
