Final experimental setup

--- a/Cieran-Copy3.ipynb
+++ b/Cieran-Copy3.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "9975b500",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e50f6c55d0e14627a70d485c46147a23",
+       "model_id": "58059a1d3bee4b2dbe7e8e11bf4825c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,6 +23,52 @@
    ],
    "source": [
     "cie = Cieran(color='tableau10', draw=draw_kde)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fff8bb83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cie._env.set_reward_weights([-0.32714125 ,0.25778596 ,0.68010007,-0.21371967, 0.47065449, 0.16493434,\n",
+    " -0.1781463,   0.19420679, -0.01189283])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3aa6f7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cie._ranker()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6763b767",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d09f8fdf255d40ff9dcf9a03c6bc1511",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, layout=Layout(height='36px', margin='8px', width='auto'), max=20000, style=ProgressStyle(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cie.search()"
    ]
   },
   {
@@ -66,14 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "f1925b72",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "778d634e31ea40dd95e7b3cbed2f6254",
+       "model_id": "4235b6aadf8b427d92a558cdcc38d210",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,8 +139,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "bcccde12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6548d189c0be474195865b2faf91a118",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': \"IntText(value=0, des…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cie.options(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "c538d25e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 6227,\n",
+       " 'choice': {},\n",
+       " 'choice2': {0: 1, 1: 2, 2: 3, 3: 4},\n",
+       " 'color': '#bb8bb0',\n",
+       " 'block': 1,\n",
+       " 'trajectories2': [[(100, 0, 0),\n",
+       "   (75.11414164101843, -0.7057349005499987, 5.239273083280324),\n",
+       "   (67.22324715645988, -0.7463674786635579, -0.048842623693673204),\n",
+       "   (65.11527221896569, 27.01168885400716, -9.094152476696507),\n",
+       "   (49.40415812620482, 30.935598229549697, -7.0424395152736),\n",
+       "   (40.97151302477667, 34.78609994098204, -5.5411731280691185),\n",
+       "   (35.45289713047779, 48.981574426407235, -11.08499064662341),\n",
+       "   (0, 0, 0)],\n",
+       "  [array([100,   0,   0]),\n",
+       "   array([ 84.68380574, -27.62851463,  40.99296224]),\n",
+       "   array([ 80.21880101, -17.94915963,  36.9463678 ]),\n",
+       "   array([ 78.52249332, -11.70078392,  20.7693515 ]),\n",
+       "   array([75.11414164, -0.7057349 ,  5.23927308]),\n",
+       "   array([66.73965732, 15.61914436,  2.43907689]),\n",
+       "   array([65.11527222, 27.01168885, -9.09415248]),\n",
+       "   array([0, 0, 0])],\n",
+       "  [array([100,   0,   0]),\n",
+       "   array([ 84.68380574, -27.62851463,  40.99296224]),\n",
+       "   array([ 81.76268446, -29.72101614,  23.51811233]),\n",
+       "   array([ 78.52249332, -11.70078392,  20.7693515 ]),\n",
+       "   array([75.11414164, -0.7057349 ,  5.23927308]),\n",
+       "   array([73.66856851, 10.00896082, -8.22569993]),\n",
+       "   array([65.11527222, 27.01168885, -9.09415248]),\n",
+       "   array([ 54.46770386,  34.27225447, -16.2455712 ]),\n",
+       "   array([0, 0, 0])],\n",
+       "  [array([100,   0,   0]),\n",
+       "   array([88.57128463, 16.96969512, -3.44056947]),\n",
+       "   array([80.79642313, 24.1817744 , -7.26204791]),\n",
+       "   array([65.11527222, 27.01168885, -9.09415248]),\n",
+       "   array([0, 0, 0])]],\n",
+       " 'rewards2': [1.2625724969914667,\n",
+       "  1.3525414488281828,\n",
+       "  1.3292194532931874,\n",
+       "  1.328863200054598]}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cie.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cacd77b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cie._env.set_reward_weights([-0.32714125 ,0.25778596 ,0.68010007,-0.21371967, 0.47065449, 0.16493434,\n",
+    " -0.1781463,   0.19420679, -0.01189283])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed3b55b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a2020f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71ff2c16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e2eb5b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab6d1d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12cb07ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1ecd30d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e051ddba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,6 +519,140 @@
    "source": [
     "cie3.save_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6a206fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "493270fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f4070653",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ea5cb03d18ab411fbd7147f8d5e11bb0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cie2 = Cieran(color='tableau10', draw=draw_kde)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8104df88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cie2._env.set_reward_weights([-0.87360337, 0.33531586,  0.05415825, -0.02326773,  0.12038894,  0.04660696,\n",
+    " -0.14320017, -0.20713601,  0.20206086])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6fd37828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad3cd844d8954f9aae94a44a56d0d1bd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, layout=Layout(height='36px', margin='8px', width='auto'), max=20000, style=ProgressStyle(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cie2._ranker(); cie2.search()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93bc1510",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37cc581f4c1341f1865baeb3b8222555",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': \"IntText(value=0, des…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cie2.options(46)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "477eebb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1d4d243",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcb2ed89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fce1e408",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2817,19 +3150,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f6c41e70",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
